--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  
   <groupId>qa.testAuthoThon.com</groupId>
   <artifactId>qa.testAuthoThon.com</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>qa.testAuthoThon.com</name>
+	<packaging>war</packaging>
   <description>Autothon comp</description>
   
   <dependencies>
